--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -329,12 +329,14 @@ html, body {
   border: 1px solid #285e70;
   border-radius: 5px;
   background: white;
-  display: none;
+  opacity: 0.0;
   width: 250px;
   height: 400px;
   position: fixed;
   bottom: 0;
   right: 0;
+  -webkit-transition: all .1s ease-in-out;
+  transition: all .1s ease-in-out;
 }
 
 .donny-chatbox .chatbox-header {
@@ -357,5 +359,24 @@ html, body {
 
 .donny-chatbox .chatbox-header .min-close-area .fa-times:hover {
   cursor: pointer;
+}
+
+.donny-chatbox .chatbox-text-area .chat {
+  text-align: center;
+  margin: auto;
+  position: relative;
+  width: 250px;
+  height: 300px;
+  scroll-behavior: auto;
+}
+
+.donny-chatbox .chatbox-text-area textarea {
+  outline: none;
+  resize: none;
+  width: 230px;
+  height: 50px;
+  position: absolute;
+  left: 6px;
+  bottom: 20px;
 }
 /*# sourceMappingURL=index.css.map */
