--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -367,7 +367,22 @@ html, body {
   position: relative;
   width: 250px;
   height: 300px;
-  scroll-behavior: auto;
+  overflow: scroll;
+}
+
+.donny-chatbox .chatbox-text-area .chat p {
+  text-align: justify;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-radius: 5px;
+  color: white;
+  background-color: #285e70;
+  padding: 5px;
 }
 
 .donny-chatbox .chatbox-text-area textarea {
@@ -378,5 +393,13 @@ html, body {
   position: absolute;
   left: 6px;
   bottom: 20px;
+}
+
+.donny-chatbox .chatbox-text-area button {
+  font-size: .6rem;
+  height: 15px;
+  position: absolute;
+  bottom: 1px;
+  left: 100px;
 }
 /*# sourceMappingURL=index.css.map */
