--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -305,6 +305,9 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    .member-discount-area-navigation {
+        display: none;
+    }
     .member-discount-title-area {
         h2 {
             color: $blue_40;
@@ -460,6 +463,115 @@ body {
             position: absolute;
             bottom: 1px;
             left: 100px;
+        }
+    }
+}
+
+/********************** MEDIA QUERIES *********************/
+
+@media (min-width: 901px) {
+    #mobile-header {
+        display: none;
+    }
+}
+
+@media (min-width: 320px) and (max-width: 900px) {
+    #desktop-header {
+        display: none;
+    }
+    .jumbotron-title-area {
+        display: none;
+    }
+    .jumbotron-navigation {
+        display: none;
+    }
+    .save-on-section {
+        display: none;
+    }
+    .member-discount-area {
+        display: block;
+        text-align: center;
+        p {
+            display: none;
+        }
+        .member-discount-area-navigation {
+            display: block;
+            ul {
+                margin: 0;
+                padding: 0;
+                a {
+                    color: $blue_30;
+                    width: 300px;
+                    font-size: 1.2rem;
+                    text-decoration: none;
+                    li {
+                        line-height: 1.5;
+                        list-style-type: none;
+                        border-bottom: 1px solid white;
+                    }
+                }
+            }
+        }
+    }
+
+    /** THE MAIN MOBILE HEADER AREA **************************/
+
+    #mobile-header {
+        display: block;
+        padding: 10px;
+
+        .middle-nav-section-mobile {
+            .virtual-assistant-area-mobile {
+                .virtual-assistant-image-mobile {
+                    background: url("https://image.shutterstock.com/image-photo/black-doctor-portrait-isolated-on-260nw-246995734.jpg");
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    margin: auto;
+                    border: 2px solid $black_10;
+                    border-radius: 50%;
+                    width: 60px;
+                    height: 60px;
+                    &:hover {
+                        cursor: pointer;
+                    }
+                }
+                p {
+                    text-align: center;
+                    span {
+                        font-weight: bold;
+                        color: $blue_40;
+                    }
+                }
+            }
+
+            .site-logo-area-mobile {
+                text-align: center;
+                color: $blue_30;
+                // The site icon
+                .fas {
+                    font-size: 4rem;
+                }
+                p {
+                    font-size: 1.5rem;
+                    margin: 0 0 0 5px;
+                    span {
+                        font-size: 2rem;
+                    }
+                }
+            }
+            .searchbar-area-mobile {
+                width: 100%;
+                .searchbar-div {
+                    width: 270px;
+                    margin: auto;
+                    input {
+                        width: auto;
+                    }
+                    button {
+                        display: none;
+                    }
+                }
+            }
         }
     }
 }
