--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -430,13 +430,13 @@ body {
   font-size: 2vw;
 }
 
-.members-section {
-  background-position: top right;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: auto;
-  height: 400px;
-  background-image: url("https://agcdn-2mrybbgckm7omi0k.netdna-ssl.com/wp-content/uploads/2017/06/alphagamma-3-reasons-why-helping-people-is-not-always-good-for-business-entrepreneurship-1021x580.jpg");
+.connect-community-section {
+  text-align: center;
+  padding: 20px;
+}
+
+.connect-community-section .title-text-content h2 {
+  color: #285e70;
 }
 
 .donny-chatbox {
